added comments and readme

--- a/src/slider.css
+++ b/src/slider.css
@@ -66,7 +66,7 @@ body {font-family: Verdana, sans-serif; margin:0}
     background-color: #717171;
 }
 
-/* Add an italic font style to all quotes */
+/* Add an italic font style to all numbers */
 .slide p {font-style: italic;}
 
 
